# vibe

./: .env.example  .gitignore  README.md  pyproject.toml
archive/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
archive/management/commands/: run_listener.py  sync_history.py
archive/migrations/: 0001_initial.py  0002_rename_idx_message_transcription_pending_idx_msg_transcribe_pending.py  0003_bookmark.py  0004_rebuild_search_vector_simple.py
archive/templates/archive/: _chats_list.html  _message.html  base.html  bookmarks.html  chat.html  chat_media.html  chats.html  login.html  search.html
config/: settings.py  urls.py
