[project]
name = "vibe"
version = "0.1.0"
description = "Telegram message archiver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1",
    "psycopg2-binary>=2.9",
    "telethon==1.43.2",
    "python-decouple>=3.8",
    "aiofiles>=23.0",
    "pillow>=11.0",
    "whitenoise>=6.0",
    "gunicorn>=26.0.0",
]
